--- a/server/client/app/js/app.component.html
+++ b/server/client/app/js/app.component.html
@@ -1,3 +1,6 @@
 <h1>{{_pageTitle}}</h1>
-
+<nav>
+    <a routerLink="/login" routerLinkActive="active">Login</a>
+    <a routerLink="/home" routerLinkActive="active">Home</a>
+</nav>
 <router-outlet></router-outlet>
