--- a/server/client/app/ts/logincomponent/login.component.html
+++ b/server/client/app/ts/logincomponent/login.component.html
@@ -1,1 +1,3 @@
-<h2>Login Component23</h2>
+<h2>{{_loginMessage}}</h2>
+<button (click)="login()">Login</button>
+<button (click)="logout()">Logout</button>
