--- a/server/client/app/ts/app.component.html
+++ b/server/client/app/ts/app.component.html
@@ -1,6 +1,16 @@
-<h1>{{_pageTitle}}</h1>
-<nav>
-    <a routerLink="/login" routerLinkActive="active">Login</a>
-    <a routerLink="/home" routerLinkActive="active">Home</a>
-</nav>
-<router-outlet></router-outlet>
+<div class="jumbotron">  
+        <div class="page-header">  
+            <h1>{{_pageTitle}}</h1>
+        </div>
+
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">    
+                <ul class="nav navbar-nav">
+                    <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
+                    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>                   
+                </ul>
+            </div>
+        </nav>      
+    <router-outlet></router-outlet>
+</div>
+    
