--- a/server/client/app/ts/logincomponent/login.component.html
+++ b/server/client/app/ts/logincomponent/login.component.html
@@ -1,3 +1,3 @@
 <h2>{{_loginMessage}}</h2>
-<button (click)="login()">Login</button>
-<button (click)="logout()">Logout</button>
+<button type="button" class="btn btn-info" (click)="login()">Login</button>
+<button type="button" class="btn btn-info" (click)="logout()">Logout</button>
